mlruns/0/1214bc9f59c4414bb85e1d9ef0c886b4/params/pipeline.error

---------------------------------------------------------------------------
Exception encountered at "In [9]":
  Cell In[9], line 4
    md = "**17_sentiment_validation concluído ✅**
         ^
SyntaxError: unterminated string literal (detected at line 4)

